Fixed issue where page nav overlay was not showing up properly (#2279)

--- a/src/components/DocumentContainer/DocumentContainer.scss
+++ b/src/components/DocumentContainer/DocumentContainer.scss
@@ -32,10 +32,6 @@
       * {
         pointer-events: all;
       }
-
-      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-        top: 0;
-      }
     }
   }
 }
